--- a/urunler.html
+++ b/urunler.html
@@ -203,10 +203,18 @@
                 <div class="footer-contact">
                     <h4>İletişim</h4>
                     <address>
-                        <p>📍 Örnek Mahallesi, Tekstil Caddesi No:35<br>İstanbul, Türkiye</p>
+                        <p>📍 Pendik, İstanbul</p>
                         <p>📞 <a href="tel:+902121234567">0212 123 45 67</a></p>
                         <p>✉️ <a href="mailto:info@gulperceyiz.com">info@gulperceyiz.com</a></p>
                     </address>
+                    <div class="footer-map">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d48246.95614652611!2d29.21!3d40.88!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac7b7b7b7b7b7%3A0x0!2sPendik%2C%20Istanbul!5e0!3m2!1str!2str!4v1700000000000!5m2!1str!2str"
+                            width="100%" height="180" style="border:0; border-radius: 12px; margin-top: 1rem;"
+                            allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                            title="Gülper Çeyiz Konum">
+                        </iframe>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
