Add campaign banner and FAQ page, update styles
Introduced a fixed campaign banner to index.html, urun-detay.html, and urunler.html, with corresponding styles in index.css. Added sss.html as a new FAQ page with category filtering and accordion functionality, and included dedicated FAQ styles in index.css. Adjusted spacing and layout in product and page header sections to accommodate the new banner.

--- a/urun-detay.html
+++ b/urun-detay.html
@@ -48,6 +48,17 @@
         </div>
     </header>
 
+    <!-- Campaign Banner -->
+    <div class="campaign-banner">
+        <div class="campaign-banner-content">
+            <span class="campaign-banner-item">🎉 500 TL üzeri siparişlerde <strong>ÜCRETSİZ KARGO</strong></span>
+            <span class="campaign-banner-divider">•</span>
+            <span class="campaign-banner-item">💝 Yeni üyelere özel <strong>%10 İNDİRİM</strong> - Kod: HOSGELDIN</span>
+            <span class="campaign-banner-divider">•</span>
+            <span class="campaign-banner-item">🚚 Aynı gün kargo, 2-3 günde kapınızda</span>
+        </div>
+    </div>
+
     <!-- Breadcrumb -->
     <nav class="breadcrumb">
         <div class="container">
