--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
         </div>
     </header>
 
+    <!-- Campaign Banner -->
+    <div class="campaign-banner">
+        <div class="campaign-banner-content">
+            <span class="campaign-banner-item">🎉 500 TL üzeri siparişlerde <strong>ÜCRETSİZ KARGO</strong></span>
+            <span class="campaign-banner-divider">•</span>
+            <span class="campaign-banner-item">💝 Yeni üyelere özel <strong>%10 İNDİRİM</strong> - Kod: HOSGELDIN</span>
+            <span class="campaign-banner-divider">•</span>
+            <span class="campaign-banner-item">🚚 Aynı gün kargo, 2-3 günde kapınızda</span>
+        </div>
+    </div>
+
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-overlay"></div>
